objects/PRX_Admin_Data_Load__c.object
<CustomObject>
    <description>Object to be used to upload data without data loader</description>
    <fields>
        <fullName>PRX_Action__c</fullName>
        <label>Action</label>
        <picklist>
            <picklistValues>
                <fullName>Account Team Update</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PRX_Error_Log__c</fullName>
        <label>Error Log</label>
        <length>131070</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PRX_Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Failed</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>PRX_Admin_Data_Load</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AD-{000000}</displayFormat>
        <label>PRX_Admin_Data_Load No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Admin Data Load</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>